.dockerignoreとDockerfileの修正: 不要なファイルの除外とベンダーディレクトリの確認メッセージを追加

--- a/.dockerignore
+++ b/.dockerignore
@@ -3,23 +3,6 @@
 
 # Node modules (not needed for Go build)
 node_modules/
-package-lock.json
-package.json
-
-# Build artifacts
-main
-*.exe
-*.dll
-*.so
-*.dylib
-
-# Test files
-*_test.go
-
-# Documentation that's not needed in container
-README.md
-*.md
-!docs/
 
 # Environment files
 .env.local
@@ -33,8 +16,5 @@ Thumbs.db
 # IDE files
 .vscode/
 .idea/
-*.swp
-*.swo
 
-# Important: vendor/ directory is NOT excluded
-# It contains the LINE Works SDK submodule that must be included
+# Note: Using explicit COPY commands in Dockerfile instead of wildcards
